[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Guillaume THOMAS <guillaume.thomas@cea.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.4"
ipykernel = "^6.29.5"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
